# 21C1-ObrerosInformaticos

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  asd.rdb  logfile.txt  redis.config  texto.txt
front-end/: app.js  (+2 more)
redis_server/: Cargo.toml
redis_server/src/: client.rs  execution.rs  lib.rs  listener_thread.rs  main.rs  monitor.rs  pubsub.rs  server.rs
redis_server/src/key_command/: copy.rs  del.rs  exists.rs  expire.rs  expireat.rs  key_type.rs  keys.rs  persist.rs  rename.rs  sort.rs  touch.rs  ttl.rs
redis_server/src/lists_command/: lindex.rs  llen.rs  lpop.rs  lpush.rs  lpushx.rs  lrange.rs  lrem.rs  lset.rs  rpop.rs  rpush.rs  rpushx.rs
redis_server/src/pubsub_command/: mod.rs  publish.rs  pubsub.rs  punsubscribe.rs  subscribe.rs  unsubscribe.rs
redis_server/src/server_command/: config.rs  dbsize.rs  flushdb.rs  info.rs  monitor.rs  ping.rs  quit.rs
redis_server/src/set_command/: sadd.rs  scard.rs  sismember.rs  smembers.rs  srem.rs
redis_server/src/storage/: data_storage.rs  entry.rs  parser.rs
redis_server/src/string_command/: append.rs  decrby.rs  get.rs  getdel.rs  getset.rs  incrby.rs  mget.rs  mod.rs  mset.rs  set.rs  strlen.rs
redis_server/test_files/: test_configuration_3.config
redis_server/tests/: common.rs  integrative_tests.rs  key_command_tests.rs  list_command_tests.rs  pubsub_command_tests.rs
web_server/: Cargo.toml
web_server/front-end/: app.js  main.css
web_server/src/: client.rs  listener.rs  main.rs  request_handler.rs  server.rs  threadpool.rs
web_server/src/http/: method.rs  mod.rs  request.rs  response.rs
(+119 files in other folders)
