[package]
name = "redis_server"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
redis = "*"
redis-protocol = { path = "../redis-protocol" }
threadpool = { path = "../threadpool" }