[package]
name = "web_server"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis_server = { path = "../redis_server" }
redis_protocol = { path = "../redis_protocol" }
threadpool = { path = "../threadpool" }
